<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutUsers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <TextView
                android:id="@+id/tvTxtCeco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/ceco"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tvTxtTamanho"
                app:layout_constraintEnd_toStartOf="@+id/tvNumCeco"
                app:layout_constraintTop_toTopOf="@+id/tvTxtTamanho" />

            <TextView
                android:id="@+id/tvNumCeco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/num_ceco"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvTxtCeco"
                app:layout_constraintEnd_toStartOf="@+id/btn_option"
                app:layout_constraintTop_toTopOf="@+id/tvTxtCeco" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/general" />

            <TextView
                android:id="@+id/tvTxtTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tamanho"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@+id/iv_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNumTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/text_num_tamanho"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvTxtTamanho"
                app:layout_constraintEnd_toStartOf="@+id/tvTxtCeco"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvTxtTamanho"
                app:layout_constraintTop_toTopOf="@+id/tvTxtTamanho"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvTxtTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/tipo"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTxtTamanho"
                app:layout_constraintTop_toBottomOf="@+id/tvTxtCentro" />

            <TextView
                android:id="@+id/tvCodigoTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_codigo_tipo"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvTxtTipo"
                app:layout_constraintStart_toEndOf="@+id/tvTxtTipo"
                app:layout_constraintTop_toTopOf="@+id/tvTxtTipo" />

            <TextView
                android:id="@+id/tvTxtCentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/txtCentro"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/tvTxtTamanho"
                app:layout_constraintTop_toBottomOf="@+id/tvTxtTamanho" />

            <TextView
                android:id="@+id/tvNomCentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/nombre_centro"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvTxtCentro"
                app:layout_constraintStart_toEndOf="@+id/tvTxtCentro"
                app:layout_constraintTop_toTopOf="@+id/tvTxtCentro" />

            <ImageButton
                android:id="@+id/btn_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/three_point_menu"
                app:tint="#FFFFFF"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
