<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_dialog">

        <TextView
            android:id="@+id/tvTxtBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/barcode"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvBarcodeRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/code"
            android:textColor="@color/azulhoravar"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_txt_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="2"
        android:text="@string/mensaje_dalog"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_eliminar_dialog"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:background="@drawable/border_shape"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/eliminar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancelar_dialog"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_cancelar_dialog"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:background="@drawable/border_shape"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:paddingEnd="15dp"
        android:paddingBottom="0dp"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>