<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layouttext"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtconfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textdialog_bg"
            android:gravity="center"
            android:text="@string/txtconfig"
            android:textColor="@color/white"
            android:textSize="34dp">

        </TextView>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layouttext2"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/txtVconfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtconfig"
            android:textSize="14dp"
            android:textColor="@color/white"
            android:background="@color/white"
            android:gravity="center">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutip"
        android:orientation="horizontal"
        android:paddingTop="28dp"
        >
        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/txtip"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"></TextView>
        <EditText
            android:id="@+id/edtip"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginLeft="10dp"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutrecursos"
        android:orientation="horizontal"
        android:paddingTop="28dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/txtrecursos"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"></TextView>

        <EditText
            android:id="@+id/edtrecurso"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:id="@+id/layoutfoto"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="78dp"
            android:layout_height="58dp"
            android:background="@drawable/logo_gesl"
             />

        <Button
            android:id="@+id/butCsave"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="130dp"
            android:background="@drawable/save_icon"
            android:backgroundTint="#353535"></Button>
    </LinearLayout>

</LinearLayout>